fix spacings

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,8 +35,16 @@ p.quote {
   margin-bottom: 3rem;
 }
 
+@media screen and (max-width: 768px) {
+  .icons {
+    margin-top: 20px;
+  }
+}
 
 @media screen and (min-width: 767px) {
+  .icons {
+    margin-bottom: 48px;
+  }
   h3 {
     text-align: left;
   }
@@ -57,10 +65,15 @@ h1 {
   margin-top: 0;
 }
 
-.header-contianer {
-  padding-top: 70px;
-}
 
+.header-contianer {
+  margin-top: 6rem;
+}
+@media screen and (min-width: 767px) {
+  .header-contianer {
+    padding-top: 3rem;
+  }
+}
 .header-right p {
   &, & a {
     font-weight: 300;
@@ -68,10 +81,9 @@ h1 {
   }
   a {
     text-decoration: none;
-  border-bottom:   1px solid transparent;
-  transition:      text-shadow 0.3s;
-  text-shadow: 0px 0px 0px transparent;
-
+    border-bottom: 1px solid transparent;
+    transition: text-shadow 0.3s;
+    text-shadow: 0px 0px 0px transparent;
   }
   a:hover {
     text-shadow: 1px 1px 0 rgba(255,0,255,1);
